# h2hdb-downloader

./: .gitignore  CLAUDE.md  README.md  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
src/h2hdb_downloader/: __init__.py  _queue.py  downloader.py
tests/: conftest.py  test_downloader.py  test_queue_io.py  test_queue_pure.py
