[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h2hdb-downloader"
version = "0.3.1"
description = "Download gallery and insert into h2hdb"
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
requires-python = ">=3.14,<3.15"
dependencies = ["h2hdb>=0.9.1.9", "hbrowser>=0.33.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pymarkdownlnt>=0.9.38",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/h2hdb-downloader"
Source = "https://github.com/Kuan-Lun/h2hdb-downloader"
Tracker = "https://github.com/Kuan-Lun/h2hdb-downloader/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/h2hdb_downloader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Mirror flake8's Black-compatible ignore set (see .vscode/settings.json).
# These pycodestyle rules conflict with Black's formatting choices.
extend-ignore = ["E203", "E226", "E501"]
